    - Now, there will only be one timer (per shard).
- New "game" added to the rotation: Kaguya's current version!
- Fixed a bug where $expadd <num> <user> would mention the user of the command, not the recipient
- Fixed the same bug with $points <target> and $exp <target>


Version 1.22.1

- Added help command for $ping.

Version 1.22

- Fixed a bug with $stats where if a shard disconnected and re-logged in, it would re-add the stats for that shard to the total counts.
    - Now, this will only apply for the first 30 minutes (if this is too long, I will make it shorter, but usually shards don't disconnect within this time frame.)
- $echo will now no longer execute the command if a filtered phrase is detected.
- $ping command added.
- Fully functional tictactoe game added! Check out "$h ttt" or "$h tictactoe" for more info!
- Removed the Global Avg Gamble Win % stat from $stats
- Added a [Owner Only] tag to all bot commands that require owner (in the $help command).
- Added lot of missing commands to the $help command list
- Added a lot of missing $h <command> help commands.
- $scrapeserver removed from the command list. This was owner only but it was useless and was removed awhile ago.
- Alphabetized all of the command lists. (Except for Music, because $m play is the most important one, for example.)
- $createteamrole command removed.
- $delteams command removed from the command list. This is because it's only designed for one server. It is still active, but is now owner only.
- Added missing aliases to various help commands.
- Added missing aliases to various missing commands in the $h command list.
- Added missing permissions to some help commands (Ex: Permissions Required: ...)
- Fixed wrong help command for $removerole


Version 1.21.2

- $n bomb command limited to five uses per hour (was ten).
    - This is to prevent gateway deadlocking (where the bot crashes basically).