@@ -34,6 +34,7 @@ Version 1.23
 - New "game" added to the rotation: Kaguya's current version!
 - Fixed a bug where $expadd <num> <user> would mention the user of the command, not the recipient
 - Fixed the same bug with $points <target> and $exp <target>
+- $kaguyawarn now has a syntax in the help command
 
 
 Version 1.22.1
